css/Main.css
/* ... */
.u-section-1 .stat-total-name {
  position: relative;
  font-size: 1rem;
  width: 60%;
  word-wrap: normal;
  margin: 0px 0px 0px 15px;
  justify-content: flex-end;
}
.u-section-1 .u-text-58 {
  position: relative;
  left: 3rem;
  top: 7rem;
  font-weight: 700;
}

@media (max-width: 100px) {
  .u-section-1 .u-sheet-1 {
    min-height: 1033px;
  }

  .u-section-1 .u-layout-wrap-1 {
    width: 991px;
    margin-right: auto;
    margin-left: -31px;
  }

  .u-section-1 .u-layout-cell-1 {
    min-height: 1031px;
  }

  .u-section-1 .u-text-2 {
    margin-right: 87px;
  }

  .u-section-1 .u-text-3 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-4 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-5 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-6 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-7 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-8 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-9 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-10 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-11 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-12 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-13 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-14 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-15 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-16 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-17 {
    margin-right: 20px;
    margin-left: 168px;
  }

  .u-section-1 .u-text-18 {
    margin-right: 125px;
    margin-left: 28px;
  }

  .u-section-1 .u-text-19 {
    margin-right: 28px;
    margin-left: 142px;
  }

  .u-section-1 .u-text-20 {
    margin-right: 142px;
    margin-left: 21px;
  }

  .u-section-1 .u-text-21 {
    margin-right: 21px;
    margin-left: 142px;
  }

  .u-section-1 .u-layout-cell-2 {
    min-height: 1208px;
  }

  .u-section-1 .u-line-3 {
    width: 743px;
  }

  .u-section-1 .u-line-5 {
    transform-origin: right center 0px;
    top: 846px;
    width: 631px;
  }

  .u-section-1 .u-group-1 {
    margin-top: 74px;
  }

  .u-section-1 .u-container-layout-3 {
    padding-top: 8px;
    padding-bottom: 1px;
  }

  .u-section-1 .u-text-23 {
    margin-right: 90px;
    margin-left: 176px;
  }

  .u-section-1 .u-btn-4 {
    margin-top: -118px;
    margin-right: 165px;
  }

  .u-section-1 .u-text-24 {
    margin-top: 71px;
    margin-right: 639px;
    margin-left: 0;
  }

  .u-section-1 .u-text-25 {
    margin-right: 639px;
    margin-left: 0;
  }

  .u-section-1 .u-btn-5 {
    margin-top: -95px;
    margin-right: auto;
  }

  .u-section-1 .u-group-2 {
    margin-left: 649px;
  }

  .u-section-1 .u-image-2 {
    height: NaNpx;
  }

  .u-section-1 .u-image-3 {
    height: NaNpx;
  }

  .u-section-1 .u-image-4 {
    height: NaNpx;
  }

  .u-section-1 .u-image-5 {
    height: NaNpx;
  }

  .u-section-1 .u-image-6 {
    height: NaNpx;
  }

  .u-section-1 .u-image-7 {
    height: NaNpx;
  }

  .u-section-1 .u-image-8 {
    height: NaNpx;
  }

  .u-section-1 .u-image-9 {
    height: NaNpx;
  }

  .u-section-1 .u-group-3 {
    margin-top: -827px;
  }

  .u-section-1 .u-image-10 {
    height: NaNpx;
  }

  .u-section-1 .u-image-11 {
    height: NaNpx;
  }

  .u-section-1 .u-image-12 {
    height: NaNpx;
  }

  .u-section-1 .u-image-13 {
    height: NaNpx;
  }

  .u-section-1 .u-image-14 {
    height: NaNpx;
  }

  .u-section-1 .u-image-15 {
    height: NaNpx;
  }

  .u-section-1 .u-image-16 {
    height: NaNpx;
  }

  .u-section-1 .u-image-17 {
    height: NaNpx;
  }

  .u-section-1 .u-image-18 {
    height: NaNpx;
  }

  
  .u-section-1 .u-text-58 {
    width: auto;
    margin-top: 718px;
    margin-right: 263px;
    margin-left: 309px;
  }

}
/* ... */

